# payment-command-center

./: .gitignore  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.md  snowflake.yml
.github/workflows/: ci.yml  deploy.yml
app/: Dockerfile
cloud_migration/: plan.md
curated_analytics/: Dockerfile  README.md  requirements.txt  streamlit_app.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/: DATA_FLOW.md  DEPLOY_TROUBLESHOOTING.md  KAFKA_V3_VS_V4_HP.md  RUNBOOK.md  data_flow.html  demo_presentation.html
fallback_ingest/: Dockerfile  config.py  pyproject.toml  relay.py  sf_client.py
generator/: catalog.py  config.py  main.py  producer.py  requirements.txt  scenarios.py
kafka/: topic-config.json
kafka-connect/: Dockerfile  README.md  shared.json
kafka-connect-v3/: Dockerfile  shared.json
schemachange/: schemachange-config.yml
scripts/: create_kafka_topics.sh  health_check.sh
spcs/: analytics_service_spec.yaml  service_spec.yaml  snowflake.yml
terraform/: .terraform.lock.hcl  compute_pools.tf  database.tf  grants.tf  imports.tf  main.tf  outputs.tf  pipes.tf  resource_monitor.tf  roles.tf  schemas.tf  stages.tf  variables.tf  warehouses.tf
tests/: README.md  e2e_pipeline_test.py  test_scenario_indicator_backend.py  validate_backend.sh  validate_cicd.sh  validate_dbt.sh  validate_fallback_ingest.sh  validate_frontend.sh  validate_generator.sh  validate_issue_46.sh  validate_issue_59.sh  validate_kafka.sh  validate_runbook.sh  validate_schemachange.sh  validate_skeleton.sh  validate_spcs.sh  validate_terraform.sh
(+76 files in other folders)
