[project]
name = "april-live-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end integration tests requiring live services (deselect with '-m not e2e')",
]
